--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,51 @@
 body {
-  background: linear-gradient(to right, #007BFF, #00BFFF); /* Blue gradient */
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: #333;
-  margin: 0;
+  background: linear-gradient(to right, orange, red);
+  font-family: monospace;
+  font-size: 24px; 
 }
 
 nav {
-  background-color: #3498DB; /* Blue */
-  color: #fff; /* White text */
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #F7BEC0;
+  color: #333;
+  font-family: monospace;
   padding: 15px;
-  position: fixed;
+  position: fixed; 
   top: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Added box shadow for elevation effect */
+  left: 0%;
+  width: 100%; 
 }
 
 nav ul {
   list-style: none;
-  text-align: center;
+  text-align: center; 
 }
 
 nav li {
-  display: inline-block;
+  display: inline-block; 
   margin: 0 20px;
 }
 
 section:first-child {
-  margin-top: 90px;
+  margin-top: 90px; 
 }
 
 section {
-  background-color: #ECF0F1; /* Light gray */
+  background-color: #F5F5DC;
   padding: 22px;
-  max-width: 950px;
-  margin: 20px auto;
+  max-width: 950px; 
+  margin: 20px auto; 
   border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Added box shadow for elevation effect */
 }
 
 h1, h2, h3, p, ul, li, ol, dt, dd {
   text-align: center;
-  color: #333;
+  color: #111;
+  font-size: 1rem; 
 }
 
 a {
-  color: #3498DB; /* Blue */
-  text-decoration: none;
+  color: #333;
+  text-decoration: none; 
 }
 
 ul {
@@ -57,7 +54,7 @@ ul {
 }
 
 li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem; 
 }
 
 ol li {
@@ -71,21 +68,11 @@ img, iframe {
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+  width: 300px;
+  height: 300px;
 }
 
 iframe {
-  max-width: 100%;
-  height: auto;
-}
-
-.fragranceNote {
-  font-weight: bold;
-  color: #3498DB; /* Blue */
-}
-
-.sideBySide {
-  display: flex;
-  justify-content: space-between; /* Added spacing between elements */
+  width: 700px;
+  height: 500px;
 }
