--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,11 @@ body {
 }
 
 #map{
- height: 650px;
- width: 100%;
- border-radius: 25px;
- border-color: #FE5F55;
- border-width: thick;
- border-style: dotted;
- margin: 20px;
- margin-top: 200px;
- max-width: 100%;
- margin-left: auto;
- margin-right: auto;
+  width: 100%;
+  height: 300px;
+  border-radius: 15px;
+  border-width: medium;
+  margin: 10px auto;
 }
 
 nav {
