--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,13 @@ body {
 }
 
 #map{
-  width: 80%;
-  height: 300px;
-  margin: 10px auto;
+ width: 80%;
+ height: 400px;
+ margin: 20px;
+ margin-top: 200px;
+ max-width: 100%;
+ margin-left: auto;
+ margin-right: auto;
 }
 
 nav {
