--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ nav {
   font-family: 'Roboto', Arial, sans-serif;
   padding: 15px;
   position: fixed;
+  display: flex;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
