--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
 #map{
  width: 80%;
  height: 400px;
+ border-radius: 25px;;
+ margin: 20px;
+ margin-top: 100px;
+ margin-left: auto;
+ margin-right: auto;
 }
 
 nav {
