--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,11 @@ body {
 }
 
 #map{
- width: 80%;
- height: 400px;
- border-radius: 25px;;
- margin: 20px;
- margin-top: 100px;
- margin-left: auto;
- margin-right: auto;
-}
+    width: 80%;
+    height: 200px;
+    border-radius: 10px;
+    border-width: thin;
+    margin: 5px auto;
 
 nav {
   background-color: #5CACEE; /* Light blue */
