--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     border-radius: 10px;
     border-width: thin;
     margin: 5px auto;
-
+}
 nav {
   background-color: #5CACEE; /* Light blue */
   color: #fff;
