--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,6 @@ nav {
   width: 100%;
 }
 
-.center {
-  text-align: center;
-}
 nav ul {
   list-style: none;
   text-align: center;
@@ -86,6 +83,7 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 @media screen and (max-width: 800px) {
   section {
     background-color: #c2d9dd;
@@ -102,9 +100,19 @@ img {
     color: #091826;
   }
 }
-@font-face {
-  font-family: "MondayFeelings";
-  src: url(css/fonts/mondayfeelings.ttf) format(truetype);
+
+@media screen and (max-width: 600px) {
+  section {
+    background-color: #091826;
+    color: white;
+  }
+  nav {
+    font-size: medium;
+    font-family: cursive;
+  }
+  html {
+    background-color: #C3D898;
+  }
 }
 
 iframe {
