--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-body {
-  background: linear-gradient(to right, #3498DB, #2071B7);
-  font-family: 'Roboto', Arial, sans-serif;
-  font-size: 24px;
-  color: #fff; /* White text */
-}
 
 #map{
     width: 80%;
@@ -13,8 +7,35 @@ body {
     margin: 5px auto;
 }
 
+body {
+  background: linear-gradient(to right, #3498DB, #2071B7);
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 24px;
+  color: #fff; /* White text */
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+}
+
+  nav {
+    padding: 10px;
+    text-align: center;
+}
+
+  nav ul {
+    display: block;
+}
+
+  nav li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+}
+
 nav {
-  background-color: #5CACEE;
+  background-color: #5CACEE; /* Light blue */
   color: #fff;
   font-family: 'Roboto', Arial, sans-serif;
   padding: 15px;
@@ -82,39 +103,7 @@ img {
   height: auto;
 }
 
-@media screen and (max-width: 800px) {
-  section {
-    background-color: #c2d9dd;
-    color: #091826;
-  }
-  nav {
-    font-size: large;
-    font-family: monospace;
-  }
-  html {
-    background-color: #4e858e;
-  }
-  a {
-    color: #091826;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  section {
-    background-color: #091826;
-    color: white;
-  }
-  nav {
-    font-size: medium;
-    font-family: cursive;
-  }
-  html {
-    background-color: #C3D898;
-  }
-}
-
 iframe {
   max-width: 100%;
   height: auto;
 }
-
