--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,106 @@ body {
   font-size: 24px;
   color: #fff;
 }
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  nav {
+    padding: 10px;
+    text-align: center;
+  }
+
+  nav ul {
+    display: block;
+  }
+
+  nav li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  section {
+    width: 100%;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 5px;
+  }
+
+  h1, h2, h3 {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 1.4;
+  }
+
+  .fragranceNote {
+    font-weight: bold;
+  }
+
+  #map {
+    width: 100%;
+    height: 300px;
+    border-radius: 15px;
+    border-width: medium;
+    margin: 10px auto;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+
+  nav {
+    padding: 10px;
+    text-align: center;
+  }
+
+  nav ul {
+    display: block;
+  }
+
+  nav li {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  section {
+    width: 100%;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 5px;
+  }
+
+  h1, h2, h3 {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 1.4;
+  }
+
+  .fragranceNote {
+    font-weight: bold;
+  }
+
+  #map {
+    width: 100%;
+    height: 300px;
+    border-radius: 15px;
+    border-width: medium;
+    margin: 10px auto;
+  }
+}
+
 
 nav {
   background-color: #5CACEE;
