--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,7 @@ body {
     font-size: 14px;
     line-height: 1.4;
   }
-
-  .fragranceNote {
-    font-weight: bold;
-  }
-
+  
   #map {
     width: 100%;
     height: 300px;
@@ -177,4 +173,5 @@ iframe {
 #map{
  width: 80%;
  height: 500px;
+  margin-top: 200px;
 }
