--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ nav {
   background-color: #5CACEE;
   color: #fff;
   font-family: 'Roboto', Arial, sans-serif;
-  padding: 60px;
+  padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -173,5 +173,7 @@ iframe {
 #map{
  width: 80%;
  height: 500px;
-  margin-top: 200px;
+ margin-top: 200px;
+ margin-left: auto;
+ margin-right: auto;
 }
