--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ iframe {
  width: 80%;
  height: 500px;
  border-radius: 25px;
+ margin: 20px;
  margin-top: 200px;
  margin-left: auto;
  margin-right: auto;
