--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ section {
 
 h1, h2, h3, p, ul, li, ol, dt, dd {
   text-align: center;
-  color: #333; /* Darker text color */
+  color: #333;
   font-size: 1rem;
 }
 
